--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
-    "dev": "vite --mode development",
+    "start:dev": "vite --mode development",
+    "start:prod": "vite --mode production",
     "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview",
     "lint": "eslint src --fix --ext .ts,.tsx,.vue,.js,.jsx",
@@ -36,7 +37,7 @@
     "prettier": "^2.7.1",
     "sass": "^1.53.0",
     "ssh2": "^1.11.0",
-    "typescript": "^4.5.4",
+    "typescript": "^4.7.4",
     "unplugin-vue-components": "^0.20.1",
     "vfonts": "0.0.3",
     "vite": "^2.9.9",
