--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -4,5 +4,5 @@
     "module": "esnext",
     "moduleResolution": "node"
   },
-  "include": ["vite.config.ts","./src/utils","build"]
+  "include": ["vite.config.ts",]
 }
