--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "vfonts": "0.0.3",
     "vite": "^2.9.9",
     "vite-plugin-compression": "^0.5.1",
+    "vite-plugin-svg-icons": "^2.0.1",
     "vue-tsc": "^0.34.7"
   }
 }
