--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "axios": "^0.27.2",
     "dayjs": "^1.11.3",
     "echarts": "^5.3.3",
+    "gsap": "^3.11.2",
+    "loadash": "^1.0.0",
     "pinia": "^2.0.14",
     "vue": "^3.2.25",
     "vue-router": "^4.0.16",
