--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "@vueuse/core": "^8.7.5",
     "axios": "^0.27.2",
+    "chalk": "^4.1.2",
     "dayjs": "^1.11.3",
     "echarts": "^5.3.3",
     "gsap": "^3.11.2",
+    "inquirer": "^8.2.5",
     "loadash": "^1.0.0",
     "pinia": "^2.0.14",
     "vue": "^3.2.25",
