--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,7 @@
     "strict": true,
     "jsx": "preserve",
     "sourceMap": true,
+    "noImplicitAny": false, // 是否在表达式和声明上有隐含的any类型时报错
     "allowSyntheticDefaultImports":true,
     "resolveJsonModule": true,
     "isolatedModules": true,
